Bug 424700 - Discogs: Depending on geolocalization, results might not be in English
Summary: Discogs: Depending on geolocalization, results might not be in English
Status: RESOLVED FIXED
Alias: None
Product: kid3
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Urs Fleisch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-27 02:11 UTC by kde
Modified: 2020-07-27 17:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde 2020-07-27 02:11:48 UTC
SUMMARY
Since about a year ago, Discogs added language detection from geolocalization, breaking some of the parsing.

STEPS TO REPRODUCE
1. Request an album from Discogs from a location where English is not the first language

OBSERVED RESULT
Album release year is missing

EXPECTED RESULT
Album release year is present

SOFTWARE/OS VERSIONS
Sources compiled from master (1ecb7f99)
Operating System: Arch Linux
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 1 Bug Janitor Service 2020-07-27 02:13:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kid3/-/merge_requests/6
Comment 2 Urs Fleisch 2020-07-27 17:19:52 UTC
Git commit 5e0a763481255bdd26aea252a6863058b9696a90 by Urs Fleisch, on behalf of Baptiste Ashka.
Committed on 27/07/2020 at 16:45.
Pushed by ufleisch into branch 'master'.

Discogs: Send cookie to request english language

M  +1    -0    src/plugins/discogsimport/discogsimporter.cpp

https://invent.kde.org/multimedia/kid3/commit/5e0a763481255bdd26aea252a6863058b9696a90
Comment 3 Urs Fleisch 2020-07-27 17:42:01 UTC
Thanks for your contributions!