Discogs: Send cookie to request english language

BUG: 424700