src/plugins/discogsimport/discogsimporter.cpp
@@ -205,6 +205,7 @@ DiscogsImporter::DiscogsImporter(QNetworkAccessManager* netMgr,
       "Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_3_2 like Mac OS X; en-us) "
       "AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8H7 "
       "Safari/6533.18.5";
+  m_discogsHeaders["Cookie"] = "language2=en";
 }
 
 /**
